# webgpu-learn

./: catalog.ts  index.html  package-lock.json  package.json
playground/: utils.ts
playground/compute/: main.ts  main.wgsl
playground/hello-circle/: main.ts
playground/hello-rectangle/: main.ts  main.wgsl
playground/hello-triangle-fragment-position/: main.ts  main.wgsl
playground/hello-triangle-msaa/: index.html  main.ts  main.wgsl
playground/hello-triangle-rgb/: index.html  main.wgsl
playground/hello-triangle-rgb-vertex-buffer/: main.ts  main.wgsl
playground/hello-triangle-storage-buffer/: main.ts  main.wgsl
playground/hello-triangle-vertex-buffer2/: main.ts  main.wgsl
playground/texture/: main.ts  main.wgsl
wgpu/: Cargo.toml
wgpu-android/: README.md  build.gradle.kts  config.toml
wgpu-android/app/: build.gradle.kts
wgpu-android/app/src/main/java/pers/zhc/android/myapplication/: JNI.java  JNI.kt  MainActivity.kt
wgpu-android/app/src/main/res/layout/: activity_main.xml
wgpu-android/app/src/main/rust/: Cargo.toml
wgpu-android/app/src/main/rust/src/: hello_triangle.rs  lib.rs
wgpu/data/wplace/: 1.pix.zst  2.pix.zst
wgpu/src/: lib.rs
wgpu/src/shaders/: chunk-diff.wgsl  compute-demo.wgsl
