[package]
name = "wgpu-playground"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = "28.0.0"
winit = "0.30.12"
env_logger = "0.11.8"
anyhow = "1.0.100"
log = "0.4.29"
pollster = "0.4.0"
chrono = "0.4.42"
tokio = { version = "1.48.0", features = ["full"] }
wasm-bindgen = "0.2.106"
wasm-bindgen-futures = "0.4.56"
bytemuck = "1.24.0"
rand = "0.9.2"
palette = "0.7.6"
zstd = "0.13.3"